a lot of issues fixed